# bamgen

./: .gitmodules  Cargo.toml
src/: main.rs
